FreeST/test/Programs/ValidTests/Functional/semiAsSection/semiAsSection.fst
main : Int
main = ((;) @Char @Int) 'a' 2
