FreeST/test/Programs/InvalidTests/nonContractiveRecTypes/nonContractiveRecTypes.fst
type T = U

type U = V

type V = T

main : Char
main = 'a'
